[package]
name = "proxy"
version = "0.1.0"
edition = "2021"
authors = ["Guilherme <guilhermegcardoso7@gmail.com>"]

[dependencies]
pnet = "0.35.0"
redis = "0.28.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
lru = "0.13.0"
crossbeam-channel = "0.5.14"
serde_json = "1.0.138"
